Created pages and Tab. Backgroung image for the whole application, routing file changed.

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,9 +1,5 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
+  
 </ion-header>
 
 <ion-content [fullscreen]="true">
@@ -14,7 +10,11 @@
   </ion-header>
 
   <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <div id="border-start-button">
+        <button id="start-button" class="ion-activatable ripple-parent" (click)="goToTabs()">
+            START
+            <ion-ripple-effect></ion-ripple-effect>
+        </button>
+    </div>
   </div>
 </ion-content>
