request to API working(/characters endpoint), cerated background with transparence.

--- a/src/app/pages/cast/cast.page.scss
+++ b/src/app/pages/cast/cast.page.scss
@@ -1,3 +1,11 @@
 ion-content {
-  --background: rgb(0, 0, 0, 0.7);
+  --background: rgb(0, 0, 0, 0.5);
+}
+
+ion-list {
+  background-color:rgb(255, 255, 255, 0.7);;  
+}
+
+ion-item {
+  --background: rgb(255, 255, 255, 0);
 }
