--- a/src/app/pages/cast/cast.page.html
+++ b/src/app/pages/cast/cast.page.html
@@ -5,8 +5,20 @@
 </ion-header>
 
 <ion-content>
-    <ion-infinite-scroll threshold="100px" id="infinite-scroll">
-       <ion-infinite-scroll-content loading-spinner="bubbles" loading-text="Loading more data...">
-       </ion-infinite-scroll-content>
-    </ion-infinite-scroll>
+
+    <ion-list id="characters-list">
+        <ion-item button detail lines="inset" *ngFor="let character of (characters | async)">
+            <ion-avatar slot="start">
+                <img src="{{ character.img }}">
+            </ion-avatar>
+            <ion-label>
+                <h2>{{ character.name }}</h2>
+                <p>Birthday {{ character.birthday }}</p>
+            </ion-label>
+        </ion-item>
+    </ion-list>
+    <!--<ion-infinite-scroll threshold="100px" id="infinite-scroll" (ionInfinite)="loadData($event)">
+        <ion-infinite-scroll-content loading-spinner="bubbles" loading-text="Loading more data...">
+        </ion-infinite-scroll-content>
+    </ion-infinite-scroll>-->
 </ion-content>
