--- a/src/app/pages/episodes/episodes.page.html
+++ b/src/app/pages/episodes/episodes.page.html
@@ -6,10 +6,67 @@
 
 <ion-content>
     <ion-list id="episodes-list">
-        <ion-item button detail lines="inset" *ngFor="let episode of (episodes | async)">
+        <ion-list-header>
+          <ion-chip color="danger">
+            <ion-label>Season 1</ion-label>
+        </ion-chip>
+        </ion-list-header>
+        <ion-item button detail lines="inset" *ngFor="let episode of ( episodes | async ) | myfilter:{season:1}">
             <ion-label>
                 <h2>{{ episode.title }}</h2>
-                <p>Air date: {{ episode.air_date }}</p>
+                <p>Air date: {{ episode.title }}</p>
+            </ion-label>
+        </ion-item>
+    </ion-list>
+    <ion-list id="episodes-list">
+        <ion-list-header>
+            <ion-chip color="danger">
+                <ion-label>Season 2</ion-label>
+            </ion-chip>
+        </ion-list-header>
+        <ion-item button detail lines="inset" *ngFor="let episode of ( episodes | async ) | myfilter:{season:2}">
+            <ion-label>
+                <h2>{{ episode.title }}</h2>
+                <p>Air date: {{ episode.title }}</p>
+            </ion-label>
+        </ion-item>
+    </ion-list>
+    <ion-list id="episodes-list">
+        <ion-list-header>
+            <ion-chip color="danger">
+                <ion-label>Season 3</ion-label>
+            </ion-chip>
+        </ion-list-header>
+        <ion-item button detail lines="inset" *ngFor="let episode of ( episodes | async ) | myfilter:{season:3}">
+            <ion-label>
+                <h2>{{ episode.title }}</h2>
+                <p>Air date: {{ episode.title }}</p>
+            </ion-label>
+        </ion-item>
+    </ion-list>
+    <ion-list id="episodes-list">
+        <ion-list-header>
+            <ion-chip color="danger">
+                <ion-label>Season 4</ion-label>
+            </ion-chip>
+        </ion-list-header>
+        <ion-item button detail lines="inset" *ngFor="let episode of ( episodes | async ) | myfilter:{season:4}">
+            <ion-label>
+                <h2>{{ episode.title }}</h2>
+                <p>Air date: {{ episode.title }}</p>
+            </ion-label>
+        </ion-item>
+    </ion-list>
+    <ion-list id="episodes-list">
+        <ion-list-header>
+            <ion-chip color="danger">
+                <ion-label>Season 5</ion-label>
+            </ion-chip>
+        </ion-list-header>
+        <ion-item button detail lines="inset" *ngFor="let episode of ( episodes | async ) | myfilter:{season:5}">
+            <ion-label>
+                <h2>{{ episode.title }}</h2>
+                <p>Air date: {{ episode.title }}</p>
             </ion-label>
         </ion-item>
     </ion-list>
