--- a/src/app/pages/cast/cast.page.html
+++ b/src/app/pages/cast/cast.page.html
@@ -17,8 +17,8 @@
             </ion-label>
         </ion-item>
     </ion-list>
-    <!--<ion-infinite-scroll threshold="100px" id="infinite-scroll" (ionInfinite)="loadData($event)">
+    <ion-infinite-scroll threshold="100px" id="infinite-scroll" (ionInfinite)="loadData($event)">
         <ion-infinite-scroll-content loading-spinner="bubbles" loading-text="Loading more data...">
         </ion-infinite-scroll-content>
-    </ion-infinite-scroll>-->
+    </ion-infinite-scroll>
 </ion-content>
