--- a/src/app/pages/episodes/episodes.page.scss
+++ b/src/app/pages/episodes/episodes.page.scss
@@ -3,7 +3,7 @@ ion-content {
 }
 
 ion-list {
-  background-color:rgb(255, 255, 255, 0.7);;  
+  background-color:rgb(255, 255, 255, 0.7);  
 }
 
 ion-item {
