--- a/src/app/pages/quotes/quotes.page.html
+++ b/src/app/pages/quotes/quotes.page.html
@@ -5,5 +5,57 @@
 </ion-header>
 
 <ion-content>
+  <ion-card>
 
+    <img src="https://s-i.huffpost.com/gen/1317262/images/o-ANNA-GUNN-facebook.jpg" width="100%" height="auto" />
+
+    <ion-card-header>
+      <ion-card-subtitle>Character</ion-card-subtitle>
+      <ion-card-title>Wilson vai</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-list>
+        <ion-item>
+          <ion-icon name="egg-outline" slot="start"></ion-icon>
+          <ion-label>23/12/1975</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-icon name="fitness-outline" slot="start"></ion-icon>
+          <ion-label>Alive</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-icon name="at-outline" slot="start"></ion-icon>
+          <ion-label>Sky</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-icon name="flag-outline" slot="start"></ion-icon>
+          <ion-label>Breaking Bad</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-icon name="film-outline" slot="start"></ion-icon>
+          <ion-label> Season 2, 3, 4, 5</ion-label>
+        </ion-item>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <ion-list-header>
+      <h4>Occupation</h4>
+    </ion-list-header>
+    <ion-list>
+      <ion-item>
+        <ion-label>Awesome Label</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>Awesome Label</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>Awesome Label</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>Awesome Label</ion-label>
+      </ion-item>
+    </ion-list>
+  </ion-card>
 </ion-content>
