--- a/src/global.scss
+++ b/src/global.scss
@@ -37,3 +37,10 @@ ion-content {
 }
 
 //-----------------------------------------------------------------------------------------
+.episodes-list {
+  padding-top: 0px;
+}
+
+.episodes-list > ion-list-header{
+  background-color: #FFFFFF;
+}
