--- a/src/app/pages/cast-details/cast-details.page.html
+++ b/src/app/pages/cast-details/cast-details.page.html
@@ -1,9 +1,53 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>castDetails</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaulthref="/tabs/cast"></ion-back-button>
+    </ion-buttons>
+    <ion-title *ngIf="character">{{ character.name }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content *ngIf="character">
+  <ion-card>
 
+    <img src="{{character.img}}" width="100%" height="auto" />
+
+    <ion-card-header>
+      <ion-card-subtitle>Character</ion-card-subtitle>
+      <ion-card-title>{{ character.name }}</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-list>
+        <ion-item>
+          <ion-icon name="egg-outline" slot="start"></ion-icon>
+          <ion-label>{{ character.birthday }}</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-icon name="fitness-outline" slot="start"></ion-icon>
+          <ion-label>{{ character.status }}</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-icon name="at-outline" slot="start"></ion-icon>
+          <ion-label>{{ character.nickname }}</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-icon name="flag-outline" slot="start"></ion-icon>
+          <ion-label>{{ character.category }}</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-icon name="film-outline" slot="start"></ion-icon>
+          <ion-label>Season </ion-label><ion-label *ngFor="let s of character.appearance"> {{ s }}</ion-label>
+        </ion-item>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <ion-list-header>
+      <h4>Occupation</h4>
+    </ion-list-header>
+    <ion-list>
+      <ion-item *ngFor="let occupation of character.occupation">{{occupation}}</ion-item>
+    </ion-list>
+  </ion-card>
 </ion-content>
