--- a/src/app/pages/cast/cast.page.html
+++ b/src/app/pages/cast/cast.page.html
@@ -4,7 +4,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content *ngIf="chars.length > 0">
 
     <ion-list id="characters-list">
         <ion-item button detail lines="inset" *ngFor="let character of chars" (click)="openDetails(character)">
@@ -18,7 +18,7 @@
         </ion-item>
     </ion-list>
     <ion-infinite-scroll threshold="15%" id="infinite-scroll" (ionInfinite)="loadData($event)">
-        <ion-infinite-scroll-content loading-spinner="bubbles" loading-text="Loading more data...">
+        <ion-infinite-scroll-content loading-spinner="bubbles" loading-text="Loading more data..." style="background-color:rgb(255, 255, 255, 0.7);">
         </ion-infinite-scroll-content>
     </ion-infinite-scroll>
 </ion-content>
