--- a/src/app/pages/episodes-details/episodes-details.page.html
+++ b/src/app/pages/episodes-details/episodes-details.page.html
@@ -1,9 +1,40 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>episodesDetails</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaulthref="/tabs/episodes"></ion-back-button>
+    </ion-buttons>
+    <ion-title *ngIf="episode">{{ episode.title }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content *ngIf="episode">
+  <ion-card>
+    <ion-card-content>
+      <ion-list>
+        <ion-item>
+          <ion-icon name="film-outline" slot="start"></ion-icon>
+          <ion-label>{{ episode.season }}</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-icon name="calendar-outline" slot="start"></ion-icon>
+          <ion-label>{{ episode.air_date }}</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>Season: {{ episode.episode }}</ion-label>
+        </ion-item>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Characters</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-list>
+        <ion-item *ngFor="let character of episode.characters">{{character}}</ion-item>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
 
 </ion-content>
