--- a/src/app/pages/quotes/quotes.page.html
+++ b/src/app/pages/quotes/quotes.page.html
@@ -1,61 +1,29 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>quotes</ion-title>
+    <ion-title class="ion-text-center">Quotes</ion-title>
   </ion-toolbar>
+  <div id="background-searchbar">
+    <ion-searchbar></ion-searchbar>
+  </div>
 </ion-header>
 
-<ion-content>
-  <ion-card>
-
-    <img src="https://s-i.huffpost.com/gen/1317262/images/o-ANNA-GUNN-facebook.jpg" width="100%" height="auto" />
-
-    <ion-card-header>
-      <ion-card-subtitle>Character</ion-card-subtitle>
-      <ion-card-title>Wilson vai</ion-card-title>
-    </ion-card-header>
-    <ion-card-content>
-      <ion-list>
-        <ion-item>
-          <ion-icon name="egg-outline" slot="start"></ion-icon>
-          <ion-label>23/12/1975</ion-label>
-        </ion-item>
-        <ion-item>
-          <ion-icon name="fitness-outline" slot="start"></ion-icon>
-          <ion-label>Alive</ion-label>
-        </ion-item>
-        <ion-item>
-          <ion-icon name="at-outline" slot="start"></ion-icon>
-          <ion-label>Sky</ion-label>
-        </ion-item>
-        <ion-item>
-          <ion-icon name="flag-outline" slot="start"></ion-icon>
-          <ion-label>Breaking Bad</ion-label>
-        </ion-item>
-        <ion-item>
-          <ion-icon name="film-outline" slot="start"></ion-icon>
-          <ion-label> Season 2, 3, 4, 5</ion-label>
-        </ion-item>
-      </ion-list>
-    </ion-card-content>
-  </ion-card>
-
-  <ion-card>
-    <ion-list-header>
-      <h4>Occupation</h4>
-    </ion-list-header>
-    <ion-list>
-      <ion-item>
-        <ion-label>Awesome Label</ion-label>
-      </ion-item>
-      <ion-item>
-        <ion-label>Awesome Label</ion-label>
-      </ion-item>
-      <ion-item>
-        <ion-label>Awesome Label</ion-label>
-      </ion-item>
-      <ion-item>
-        <ion-label>Awesome Label</ion-label>
-      </ion-item>
-    </ion-list>
-  </ion-card>
+<ion-content *ngIf="quotes">
+  
+  <ion-list>
+    <ion-item *ngFor="let quote of ( quotes | async)">
+      <ion-grid fixed>
+        <ion-row>
+          <ion-col size="2">
+            <ion-avatar>
+              <img src="{{charsImages[quote.author]}}" >
+            </ion-avatar>
+          </ion-col>
+          <ion-col size="10"> 
+            <p style="margin: 10px;"><q>{{ quote.quote }}</q></p> 
+            <ion-card-subtitle style="float: right;">{{ quote.author }}</ion-card-subtitle>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-item>
+</ion-list>
 </ion-content>
