--- a/src/app/pages/quotes/quotes.page.html
+++ b/src/app/pages/quotes/quotes.page.html
@@ -3,14 +3,14 @@
     <ion-title class="ion-text-center">Quotes</ion-title>
   </ion-toolbar>
   <div id="background-searchbar">
-    <ion-searchbar></ion-searchbar>
+    <ion-searchbar (ionInput)="filterQuotes($event)"></ion-searchbar>
   </div>
 </ion-header>
 
-<ion-content *ngIf="quotes">
+<ion-content *ngIf="chars">
   
   <ion-list>
-    <ion-item *ngFor="let quote of ( quotes | async)">
+    <ion-item *ngFor="let quote of chars">
       <ion-grid fixed>
         <ion-row>
           <ion-col size="2">
