@ionic/storage isntalled.

--- a/src/app/pages/death/death.page.scss
+++ b/src/app/pages/death/death.page.scss
@@ -1,6 +1,6 @@
 ion-content {
     --background: rgb(0, 0, 0, 0.5);
-    --background: url(/assets/img/coffin-dancers1.jpg) no-repeat center/cover fixed; 
+    --background: url(/assets/img/coffin-dancers3.gif) no-repeat center/cover fixed; 
 }
 
 ion-list{
