Changed primary color theme of the app and added font "Heart Breaking Bad" by John Athan

--- a/src/app/pages/cast/cast.page.html
+++ b/src/app/pages/cast/cast.page.html
@@ -1,6 +1,6 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title class="ion-text-center">Cast</ion-title>
+  <ion-toolbar color="primary">
+    <ion-title class="ion-text-center">Breaking Bad</ion-title>
   </ion-toolbar>
 </ion-header>
 
