--- a/src/app/pages/episodes/episodes.page.html
+++ b/src/app/pages/episodes/episodes.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-title class="ion-text-center">Episodes</ion-title>
   </ion-toolbar>
 </ion-header>
