--- a/src/app/pages/quotes/quotes.page.html
+++ b/src/app/pages/quotes/quotes.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-title class="ion-text-center">Quotes</ion-title>
   </ion-toolbar>
   <div id="background-searchbar">
@@ -19,7 +19,7 @@
             </ion-avatar>
           </ion-col>
           <ion-col size="10"> 
-            <p style="margin: 10px;"><q>{{ quote.quote }}</q></p> 
+            <p style="margin-left: 25px;"><q>{{ quote.quote }}</q></p> 
             <ion-card-subtitle style="float: right;">{{ quote.author }}</ion-card-subtitle>
           </ion-col>
         </ion-row>
