--- a/src/global.scss
+++ b/src/global.scss
@@ -36,7 +36,22 @@ ion-content {
   --background: none;
 }
 
+ion-title{
+  font-family: 'Heart Breaking Bad';
+  font-size: 48px;
+}
+
 //-----------------------------------------------------------------------------------------
+// customization I have done
+.searchbar-input {
+  border: 1px solid transparent;
+  border-radius: 50px !important;
+  background: #1f7041;
+  max-width: 400px;
+  height: 40px !important;
+  font-size: 1.15em !important;
+}
+
 .episodes-list {
   padding-top: 0px;
 }
