--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -4,12 +4,12 @@
 /** Ionic CSS Variables **/
 :root {
   /** primary **/
-  --ion-color-primary: #3880ff;
-  --ion-color-primary-rgb: 56, 128, 255;
+  --ion-color-primary: #06602C;
+  --ion-color-primary-rgb: 6,96,44;
   --ion-color-primary-contrast: #ffffff;
-  --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #3171e0;
-  --ion-color-primary-tint: #4c8dff;
+  --ion-color-primary-contrast-rgb: 255,255,255;
+  --ion-color-primary-shade: #055427;
+  --ion-color-primary-tint: #1f7041;
 
   /** secondary **/
   --ion-color-secondary: #3dc2ff;
@@ -229,4 +229,17 @@
   ion-title.title-large {
     --color: white;
   }
+}
+
+/**
+  https://www.dafont.com/pt/heart-breaking-bad.font?text=Breaking+Bad
+  Heart Breaking Bad by John Athan
+  Nota do autor
+  Inspired by Breaking Bad.
+
+  Free for all use!
+*/
+@font-face {
+  font-family: 'Heart Breaking Bad';
+  src: url('../assets/fonts/HeartBreakingBad.ttf');
 }
