Commit of "credits" page I had forgoten to push. I had to edit the cast.page.html and cast.page.ts because must be a function on it  to call the page credits. This page is out of scope of the CA.

--- a/src/app/pages/cast/cast.page.html
+++ b/src/app/pages/cast/cast.page.html
@@ -1,6 +1,11 @@
 <ion-header>
   <ion-toolbar color="primary">
     <ion-title class="ion-text-center">Breaking Bad</ion-title>
+    <ion-buttons slot="end">
+        <ion-button (click)="goToCredits()">
+          <ion-icon slot="icon-only" ios="ellipsis-vertical" md="ellipsis-vertical"></ion-icon>
+        </ion-button>
+      </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
