Credits updated with API author, second part.

--- a/src/app/pages/credits/credits.page.html
+++ b/src/app/pages/credits/credits.page.html
@@ -59,6 +59,18 @@
       <ion-grid fixed>
         <ion-row>
           <ion-col size="12">
+              <h6>Tim Biles</h6>
+              <p class="subtitleCredits">API Developer</p>
+              <p><a href="https://breakingbadapi.com/">API Site/Doc</a></p>
+              <p><a href="https://github.com/timbiles/Breaking-Bad--API">GitHub tho the API</a></p>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-item>
+    <ion-item>
+      <ion-grid fixed>
+        <ion-row>
+          <ion-col size="12">
               <h6>Technologies</h6>
               <ul class="subtitleCredits">
                 <li>Ionic Framework</li>
