Removed class tag in ion-content in death.page.html.

--- a/src/app/pages/death/death.page.html
+++ b/src/app/pages/death/death.page.html
@@ -7,7 +7,7 @@
   </div>
 </ion-header>
 
-<ion-content *ngIf="deathsArray.length > 0" [ngClass]="background">
+<ion-content *ngIf="deathsArray.length > 0">
   
   <ion-list>
     <ion-item *ngFor="let d of deathsArray">
