camera.ts file created and page module edited with the link. Dependencies has been installed. Camera still not working

--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -32,5 +32,12 @@
       <ion-label>Death</ion-label>
 	
     </ion-tab-button>
+    <ion-tab-button tab="camera">
+	
+      <ion-icon name="camera-outline"></ion-icon>
+	
+      <ion-label>Camera</ion-label>
+	
+    </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
