--- a/src/app/pages/camera/camera.page.html
+++ b/src/app/pages/camera/camera.page.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content>
-  <img [src]="photo" >
+  <img [src]="photo" horizontal="center">
   <ion-fab vertical="bottom" horizontal="center" slot="fixed">
     <ion-fab-button (click)="takePicture()">
       <ion-icon name="camera"></ion-icon>
